--- a/template-freemarker/pom.xml
+++ b/template-freemarker/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>nl.xup.template</groupId>
@@ -13,9 +14,8 @@
   <artifactId>template-freemarker</artifactId>
   <name>XupTemplate-Freemarker</name>
   <description>Freemarker based implementation of the Xup Template API</description>
-  <version>0.1</version>
-  <url>http://oss.xup.nl/template</url>
-  
+  <url>https://github.com/misl/XupTemplate</url>
+
   <dependencies>
     <dependency>
       <groupId>nl.xup.template</groupId>
@@ -28,10 +28,10 @@
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
-      <version>2.3.16</version>
+      <version>2.3.19</version>
     </dependency>
 
-  <!-- The following depencies are for unittesting only. -->
+    <!-- The following depencies are for unittesting only. -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -43,6 +43,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
 </project>
 
