--- a/template-groovy/pom.xml
+++ b/template-groovy/pom.xml
@@ -13,8 +13,7 @@
   <artifactId>template-groovy</artifactId>
   <name>XupTemplate-Groovy</name>
   <description>Groovy based implementation of the Xup Template API</description>
-  <version>0.1</version>
-  <url>http://oss.xup.nl/template</url>
+  <url>https://github.com/misl/XupTemplate</url>
   
   <dependencies>
     <dependency>
@@ -28,7 +27,7 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy</artifactId>
-      <version>1.7.1</version>
+      <version>1.8.8</version>
     </dependency>
 
   <!-- The following depencies are for unittesting only. -->
