--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.xup.template</groupId>
@@ -73,8 +74,8 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.13</version>
           <configuration>
-             <forkMode>once</forkMode>
-           </configuration> 
+            <forkMode>once</forkMode>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -98,6 +99,20 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-eclipse-plugin</artifactId>
           <version>2.9</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <version>2.3.7</version>
+          <inherited>true</inherited>
+          <configuration>
+            <instructions>
+              <Bundle-DocURL>http://TODO.org</Bundle-DocURL>
+              <Bundle-Vendor>Xup</Bundle-Vendor>
+              <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+              <_versionpolicy>$${version;===;${@}}</_versionpolicy>
+            </instructions>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -131,7 +146,7 @@
       </plugin>
     </plugins>
   </build>
-  
+
   <reporting>
     <plugins>
       <!-- General project information -->
@@ -140,7 +155,7 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>2.6</version>
       </plugin>
-    
+
       <!-- Cross references report -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -151,7 +166,7 @@
           <linkJavadoc>true</linkJavadoc>
         </configuration>
       </plugin>
-    
+
       <!-- Javadoc report -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -199,14 +214,14 @@
       </plugin>
     </plugins>
   </reporting>
-  
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <slf4j-version>1.7.2</slf4j-version>
+    <slf4j.version>1.7.2</slf4j.version>
     <junit-version>4.11</junit-version>
   </properties>
-  
+
   <dependencyManagement>
     <dependencies>
       <!-- Our own dependencies. -->
@@ -216,16 +231,21 @@
         <version>${project.version}</version>
         <scope>compile</scope>
       </dependency>
-    
+
       <!-- 3rd party dependencies. -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>${slf4j-version}</version>
-        <scope>compile</scope>
+        <version>${slf4j.version}</version>
       </dependency>
-  
-      <!-- The following dependencies are used for unittests only-->
+      <dependency>
+        <groupId>org.ops4j.pax.logging</groupId>
+        <artifactId>pax-logging-api</artifactId>
+        <version>1.7.0</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <!-- The following dependencies are used for unittests only -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -235,7 +255,7 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
-        <version>${slf4j-version}</version>
+        <version>${slf4j.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
