--- a/template-core/pom.xml
+++ b/template-core/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.logging</groupId>
+      <artifactId>pax-logging-api</artifactId>
+    </dependency>
 
     <!-- The following depencies are for unittesting only. -->
     <dependency>
