--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,18 @@
         <scope>compile</scope>
       </dependency>
 
+      <!-- OSGi -->
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.core</artifactId>
+        <version>4.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.compendium</artifactId>
+        <version>4.3.0</version>
+      </dependency>
+
       <!-- 3rd party dependencies. -->
       <dependency>
         <groupId>org.slf4j</groupId>
