Removed dependency on pax loging
For building as well as ordinary usage we use slf4j, for OSGi however
pax-logging should be packaged instead. So make sure slf4j version
matches pax-logging version.

--- a/template-freemarker/pom.xml
+++ b/template-freemarker/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>nl.xup.template</groupId>
@@ -9,10 +10,10 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
   <groupId>nl.xup.template.freemarker</groupId>
   <artifactId>template-freemarker</artifactId>
   <name>XupTemplate-Freemarker</name>
+  <packaging>bundle</packaging>
   <description>Freemarker based implementation of the Xup Template API</description>
   <url>https://github.com/misl/XupTemplate</url>
 
@@ -20,10 +21,6 @@
     <dependency>
       <groupId>nl.xup.template</groupId>
       <artifactId>template-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.ops4j.pax.logging</groupId>
-      <artifactId>pax-logging-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
