--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <slf4j.version>1.7.2</slf4j.version>
+    <!-- 
+      Be careful to use a version that is also available as OSGi bundle. For
+      instance pax-logging-api version 1.7.0.
+     -->
+    <slf4j.version>1.7.0</slf4j.version>
     <junit-version>4.11</junit-version>
   </properties>
 
@@ -249,12 +253,6 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ops4j.pax.logging</groupId>
-        <artifactId>pax-logging-api</artifactId>
-        <version>1.7.0</version>
-        <scope>provided</scope>
       </dependency>
 
       <!-- The following dependencies are used for unittests only -->
