--- a/template-core/pom.xml
+++ b/template-core/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>nl.xup.template</groupId>
@@ -8,9 +9,9 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
   <artifactId>template-core</artifactId>
   <name>XupTemplate-Core</name>
+  <packaging>bundle</packaging>
   <description>Xup Template API</description>
   <url>https://github.com/misl/XupTemplate</url>
   
@@ -29,10 +30,6 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.ops4j.pax.logging</groupId>
-      <artifactId>pax-logging-api</artifactId>
     </dependency>
 
     <!-- The following depencies are for unittesting only. -->
@@ -64,7 +61,9 @@
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Implementation-Version>${project.version}</Implementation-Version>
             <Bundle-Activator>nl.xup.template.osgi.Activator</Bundle-Activator>
-            <Export-Package></Export-Package>
+            <Export-Package>
+                        nl.xup.template
+            </Export-Package>
             <Import-Package>
               *
             </Import-Package>
@@ -74,4 +73,3 @@
     </plugins>
   </build>
 </project>
-
